# lamia

./: .editorconfig  .env.example  .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  config.yaml  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
assets/design/: CREDITS.md  lamia_transparent.psd
docs/: index.md
docs/examples/: basic.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: cli.md  evaluation.md  files-context.md  hu-syntax.md  lm-syntax.md  validation.md  web-automation.md
docs/validation/: selector-usage-guide.md
examples/basic/: index.html
examples/custom_validators/: code_validator.py  sentiment_validator.py
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
lamia/: __init__.py  async_bridge.py  cli.py  command_parser.py  command_types.py  config_manager.py  engine.py  env_loader.py  errors.py  internal_types.py  lamia.py  llm_manager.py  type_converter.py  types.py  validators.py
lamia/_internal_types/: model_retry.py
lamia/actions/: __init__.py  file.py  http.py  web.py
lamia/adapters/: __init__.py  base.py  infrastructure.py
lamia/cli/: __init__.py  api_key_utils.py  cache_cli.py  cli.py  cli_styling.py  eval_cli.py  init_wizard.py  prompts.py  scaffold.py
lamia/engine/: README.md  __init__.py  config_manager.py  config_provider.py  engine.py  factories.py  interfaces.py  llm_manager.py  providers.py  validation_manager.py
lamia/eval/: README.md  __init__.py  evaluator.py  model_cost.py  model_pricer.py  pricing_provider.py
lamia/facade/: __init__.py  command_parser.py  command_processor.py  config_builder.py  lamia.py  result_types.py
lamia/interpreter/: README.md  __init__.py  ast_analyzer.py  command_parser.py  commands.py  human_files_lazy_loader.py  hybrid_executor.py  hybrid_file_cache.py  hybrid_files_lazy_loader.py  hybrid_syntax_parser.py  python_runner.py  session_validator.py
search/: search_index.json
tests/: conftest.py  test_async_bridge.py  test_cli.py  test_cli_integration.py  test_cli_interactive.py  test_cli_lifecycle.py  test_command_parser.py  test_complete_error_integration.py  test_engine.py  test_engine_init.py  test_engine_init_integration.py  test_env_loader.py  test_errors.py  test_internal_types.py  test_lamia_command_parsing.py  test_lamia_config.py  test_llm_manager.py  test_llm_manager_adapter.py  test_strategy.py  test_type_converter.py  test_types.py  test_user_defined_validator.py  test_user_folders_loading.py  test_validator_combinations.py  test_validator_config_loading.py  test_validators.py
(+431 files in other folders)
