[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lamia"
version = "0.1.0"
description = "Lamia automation framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Sergey Sargsyan"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Core dependencies
    "python-dotenv>=0.19.0",
    "requests>=2.25.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0.0",
    "typing-extensions>=4.0.0",
    "openai>=1.12.0",
    "anthropic>=0.18.1",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "mistune>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "pytest-asyncio>=0.18.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.30.0",
    "mkdocs-autorefs>=1.4.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-git-revision-date-plugin>=0.3.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.0",
]

[project.scripts]
lamia = "lamia.cli.cli:main"

[tool.setuptools.packages.find]
include = ["lamia*"]

[tool.pyright]
include = ["lamia", "tests", "playground", "examples"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.git",
    "**/build",
    "**/dist",
    "**/htmlcov",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/site"
]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
autoSearchPaths = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"



